[package]
name = "tokio-tungstenite"
description = "Tokio binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["Daniel Abramov <dabramov@snapview.de>", "Alexey Galakhov <agalakhov@snapview.de>"]
license = "MIT"
homepage = "https://github.com/snapview/tokio-tungstenite"
documentation = "https://docs.rs/tokio-tungstenite/0.5.1"
repository = "https://github.com/snapview/tokio-tungstenite"
version = "0.5.1"

[features]
default = ["connect", "tls"]
connect = ["tokio-dns-unofficial", "tokio", "stream"]
tls = ["tokio-tls", "native-tls", "stream", "tungstenite/tls"]
stream = ["bytes"]

[dependencies]
futures = "0.1.17"

[dependencies.tungstenite]
# version = "0.5.3"
git = "https://github.com/snapview/tungstenite-rs"
rev = "3e02fe53516adca6617c0b6df32a5b09ba264729"
default-features = false

[dependencies.bytes]
optional = true
version = "0.4.6"

[dependencies.native-tls]
optional = true
version = "0.2"

[dependencies.tokio-dns-unofficial]
optional = true
version = "0.3.1"

[dependencies.tokio]
optional = true
version = "0.1.6"

[dependencies.tokio-tls]
optional = true
version = "0.1.4"

[dev-dependencies]
tokio-core = "0.1.12"
url = "1.6.0"

[patch.crates-io]
tokio-tls = { git = "https://github.com/mehcode/tokio-tls.git", rev = "df7ffe315986d33b2c16ce23524c72ccb710eac4" }
